# lights_project

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  ci_build.sh  partitions.csv  sdkconfig.defaults  version.json
.github/workflows/: release.yml
components/config_store/: CMakeLists.txt  config_store.cpp
components/config_store/include/: config_store.h
components/display/: CMakeLists.txt  display.cpp
components/display/include/: display.h  font_display.h
components/event_log/: CMakeLists.txt  event_log.cpp
components/event_log/include/: event_log.h
components/led/: CMakeLists.txt  idf_component.yml  led_manager.cpp
components/led/include/: led_manager.h
components/matter/: CMakeLists.txt  idf_component.yml  matter_bridge.cpp
components/matter/include/: matter_bridge.h
components/menu/: CMakeLists.txt  menu.cpp
components/menu/include/: menu.h
components/networking/: CMakeLists.txt  networking.cpp  tz_lookup.cpp
components/networking/include/: networking.h  tz_lookup.h
components/ota_manager/: CMakeLists.txt  ota_manager.cpp
components/ota_manager/include/: ota_manager.h
components/webserver/: CMakeLists.txt  web_ui.h  webserver.cpp
components/webserver/include/: webserver.h
main/: CMakeLists.txt  console_commands.cpp  console_commands.h  idf_component.yml  main.cpp
website/: index.html
